...

    enum SpeakToChatSensitivity: UInt8, CaseIterable, Identifiable, Sendable {
        case auto = 0x00, high = 0x01, low = 0x02
        var id: Self { self }
        var title: String {
            switch self {
            case .auto: "Auto"
            case .high: "High"
            case .low: "Low"
            }
        }
    }

...
